Dynamically load patch selection from JSON data

--- a/calculators.html
+++ b/calculators.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Old School Runescape Farming Pet Calculator">
   <meta name="author" content="Bayrock">
 
-  <link rel="stylesheet" href="css/style.css?v=1.0">
+  <link rel="stylesheet" href="css/style.css?v=1.1">
 </head>
 
 <body class="bg-primary">
@@ -18,9 +18,8 @@
     <form onsubmit="calculatePetChance()">
       <label for="cars"><b>Patch:</b></label>
 
-      <select name="patches" id="patches">
-        <option value="seaweed">Seaweed</option>
-        <option value="hespori">Hespori</option>
+      <select name="patches" id="patchSelector">
+        <option value="">Select a patch type</option>
       </select>
 
       <br><br>
