Minor syntax improvements

--- a/calculators.html
+++ b/calculators.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 
   <title>OSRS Farming Pet Calculator</title>
-  <meta name="description" content="Old School Runescape Farming Pet Calculator">
+  <meta name="description" content="Old School Runescape Tangleroot Calculator">
   <meta name="author" content="Bayrock">
 
   <link rel="stylesheet" href="css/style.css?v=1.11">
