--- a/calculators.html
+++ b/calculators.html
@@ -33,11 +33,11 @@
 
     <p class="alert" id="alertBox"></p>
     <p class="error" id="errorBox"></p>
-
   </center>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-  <script src="js/scripts.js?v=1.21"></script>
+  <script src="js/util.js?v=1"></script>
+  <script src="js/tangleroot.js?v=1"></script>
 </body>
 </html>
