--- a/src/clocks.html
+++ b/src/clocks.html
@@ -15,7 +15,7 @@
   <center>
     <h2>Tears of Guthix Countdown</h2>
 
-    <p id="clock"></p>
+    <p class="honeydew" id="clock"></p>
 
     <p class="alert" id="alertBox"></p>
     <p class="error" id="errorBox"></p>
