Add portal/home page and refactoring

--- a/src/tears.html
+++ b/src/tears.html
@@ -8,12 +8,13 @@
   <meta name="description" content="Old School Runescape Tears of Guthix Countdown">
   <meta name="author" content="Bayrock">
 
-  <link rel="stylesheet" href="css/style.css?v=1.11">
+  <link rel="stylesheet" href="css/style.css?v=1.2">
+  <link rel="stylesheet" href="css/glyphicons.css?v=1">
 </head>
 
 <body class="bg-primary">
   <center>
-    <h2>Tears of Guthix Countdown</h2>
+    <h2><a class="glyphicon glyphicon-home" aria-hidden="true" href="portal.html"></a>Tears of Guthix Countdown</h2>
 
     <p class="honeydew" id="clock"></p>
 
@@ -24,6 +25,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
   <script src="js/util.js?v=1"></script>
-  <script src="js/tears.js?v=1"></script>
+  <script src="js/tears.js?v=1.01"></script>
 </body>
 </html>
