--- a/src/tangleroot.html
+++ b/src/tangleroot.html
@@ -8,12 +8,13 @@
   <meta name="description" content="Old School Runescape Tangleroot Calculator">
   <meta name="author" content="Bayrock">
 
-  <link rel="stylesheet" href="css/style.css?v=1.11">
+  <link rel="stylesheet" href="css/style.css?v=1.2">
+  <link rel="stylesheet" href="css/glyphicons.css?v=1">
 </head>
 
 <body class="bg-primary">
   <center>
-    <h2>OSRS Farming Pet Calculator</h2>
+    <h2><a class="glyphicon glyphicon-home" aria-hidden="true" href="portal.html"></a>OSRS Farming Pet Calculator</h2>
 
     <form id="farmingForm">
       <label for="cars"><b>Patch:</b></label>
@@ -38,6 +39,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
   <script src="js/util.js?v=1"></script>
-  <script src="js/tangleroot.js?v=1"></script>
+  <script src="js/tangleroot.js?v=1.02"></script>
 </body>
 </html>
