Add responsive viewport

--- a/src/tears.html
+++ b/src/tears.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
 
   <title>OSRS Tears of Guthix Countdown</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Old School Runescape Tears of Guthix Countdown">
   <meta name="author" content="Bayrock">
 
