--- a/src/portal.html
+++ b/src/portal.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
 
   <title>OSRS Tool Portal</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Old School Runescape Tools">
   <meta name="author" content="Bayrock">
 
