--- a/src/tangleroot.html
+++ b/src/tangleroot.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
 
   <title>OSRS Farming Pet Calculator</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Old School Runescape Tangleroot Calculator">
   <meta name="author" content="Bayrock">
 
@@ -39,6 +40,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
   <script src="js/util.js?v=1"></script>
-  <script src="js/tangleroot.js?v=1.02"></script>
+  <script src="js/tangleroot.js?v=1.03"></script>
 </body>
 </html>
