Improve Lighthouse report
https://cdn.discordapp.com/attachments/277708872725299200/793493739988844574/unknown.png

--- a/src/tangleroot.html
+++ b/src/tangleroot.html
@@ -10,7 +10,8 @@
   <meta name="author" content="Bayrock">
 
   <link rel="stylesheet" href="css/style.css?v=1.2">
-  <link rel="stylesheet" href="css/glyphicons.css?v=1">
+  <link rel="preload" href="css/glyphicons.css?v=1.01" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="css/glyphicons.css?v=1.01"></noscript>
 </head>
 
 <body class="bg-primary">
