--- a/src/tears.html
+++ b/src/tears.html
@@ -10,7 +10,8 @@
   <meta name="author" content="Bayrock">
 
   <link rel="stylesheet" href="css/style.css?v=1.2">
-  <link rel="stylesheet" href="css/glyphicons.css?v=1">
+  <link rel="preload" href="css/glyphicons.css?v=1.01" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="css/glyphicons.css?v=1.01"></noscript>
 </head>
 
 <body class="bg-primary">
